plugins/binding/capi/include/TellusimCMath.h

/*
 */
struct TSQuaternionf;
typedef struct TSVector2f {
	union {
		struct {
			float32_t x, y;
		};
		float32_t v[2];
	};
} TSVector2f;
typedef struct TSVector2d {
	union {
		struct {
			float64_t x, y;
		};
		float64_t v[2];
	};
} TSVector2d;
typedef struct TSVector3f {
	union {
		struct {
			float32_t x, y, z;
		};
		struct {
			TSVector2f xy;
			float32_t xy_z;
		};
		float32_t v[3];
	};
} TSVector3f;
/*****************************************************************************\
 *
 * Matrix3x2
 *
\*****************************************************************************/

/*
 */
typedef struct TSMatrix3x2f {
	union {
		struct {
			float32_t m00, m01, m02;
			float32_t m10, m11, m12;
		};
		struct {
			TSVector3f row_0;
			TSVector3f row_1;
		};
		TSVector3f rows[2];
		float32_t m[6];
	};
} TSMatrix3x2f;
typedef struct TSMatrix3x2d {
	union {
		struct {
			float64_t m00, m01, m02;
			float64_t m10, m11, m12;
		};
		struct {
			TSVector3d row_0;
			TSVector3d row_1;
		};
		TSVector3d rows[2];
		float64_t m[6];
	};
} TSMatrix3x2d;
/*
 */
TS_CAPI void TS_CCALL tsMatrix3x2f_set(TSMatrix3x2f *m, const float32_t *src, uint32_t size, bool_t row_major);
TS_CAPI void TS_CCALL tsMatrix3x2d_set(TSMatrix3x2d *m, const float64_t *src, uint32_t size, bool_t row_major);
TS_CAPI void TS_CCALL tsMatrix3x2f_get(const TSMatrix3x2f *m, float32_t *dest, uint32_t size, bool_t row_major);
TS_CAPI void TS_CCALL tsMatrix3x2d_get(const TSMatrix3x2d *m, float64_t *dest, uint32_t size, bool_t row_major);
TS_CAPI TSMatrix3x2f* TS_CCALL tsMatrix3x2f_scale(TSMatrix3x2f *ret, float32_t x, float32_t y);
TS_CAPI TSMatrix3x2d* TS_CCALL tsMatrix3x2d_scale(TSMatrix3x2d *ret, float64_t x, float64_t y);
TS_CAPI TSMatrix3x2f* TS_CCALL tsMatrix3x2f_translate(TSMatrix3x2f *ret, float32_t x, float32_t y);
TS_CAPI TSMatrix3x2d* TS_CCALL tsMatrix3x2d_translate(TSMatrix3x2d *ret, float64_t x, float64_t y);
TS_CAPI TSMatrix3x2f* TS_CCALL tsMatrix3x2f_rotate(TSMatrix3x2f *ret, float32_t angle);
TS_CAPI TSMatrix3x2d* TS_CCALL tsMatrix3x2d_rotate(TSMatrix3x2d *ret, float64_t angle);
TS_CAPI TSVector2f* TS_CCALL tsMatrix3x2f_mul2(TSVector2f *ret, const TSMatrix3x2f *m, const TSVector2f *v);
TS_CAPI TSVector2d* TS_CCALL tsMatrix3x2d_mul2(TSVector2d *ret, const TSMatrix3x2d *m, const TSVector2d *v);
TS_CAPI TSVector2f* TS_CCALL tsMatrix3x2f_mul2t(TSVector2f *ret, const TSVector2f *v, const TSMatrix3x2f *m);
TS_CAPI TSVector2d* TS_CCALL tsMatrix3x2d_mul2t(TSVector2d *ret, const TSVector2d *v, const TSMatrix3x2d *m);
TS_CAPI TSMatrix3x2f* TS_CCALL tsMatrix3x2f_mul(TSMatrix3x2f *ret, const TSMatrix3x2f *m0, const TSMatrix3x2f *m1);
TS_CAPI TSMatrix3x2d* TS_CCALL tsMatrix3x2d_mul(TSMatrix3x2d *ret, const TSMatrix3x2d *m0, const TSMatrix3x2d *m1);
TS_CAPI TSMatrix3x2f* TS_CCALL tsMatrix3x2f_transpose(TSMatrix3x2f *ret, const TSMatrix3x2f *m);
TS_CAPI TSMatrix3x2d* TS_CCALL tsMatrix3x2d_transpose(TSMatrix3x2d *ret, const TSMatrix3x2d *m);
TS_CAPI TSMatrix3x2f* TS_CCALL tsMatrix3x2f_inverse(TSMatrix3x2f *ret, const TSMatrix3x2f *m);
TS_CAPI TSMatrix3x2d* TS_CCALL tsMatrix3x2d_inverse(TSMatrix3x2d *ret, const TSMatrix3x2d *m);
/*
 */
TS_CAPI void TS_CCALL tsMatrix4x3f_set(TSMatrix4x3f *m, const float32_t *src, uint32_t size, bool_t row_major);
TS_CAPI void TS_CCALL tsMatrix4x3f_get(const TSMatrix4x3f *m, float32_t *dest, uint32_t size, bool_t row_major);
TS_CAPI TSMatrix4x3f* TS_CCALL tsMatrix4x3f_scale(TSMatrix4x3f *ret, float32_t x, float32_t y, float32_t z);
TS_CAPI TSMatrix4x3f* TS_CCALL tsMatrix4x3f_translate(TSMatrix4x3f *ret, float32_t x, float32_t y, float32_t z);
TS_CAPI TSMatrix4x3f* TS_CCALL tsMatrix4x3f_rotateX(TSMatrix4x3f *ret, float32_t angle);
TS_CAPI TSMatrix4x3f* TS_CCALL tsMatrix4x3f_rotateY(TSMatrix4x3f *ret, float32_t angle);
TS_CAPI TSMatrix4x3f* TS_CCALL tsMatrix4x3f_rotateZ(TSMatrix4x3f *ret, float32_t angle);
TS_CAPI TSMatrix4x3f* TS_CCALL tsMatrix4x3f_rotate(TSMatrix4x3f *ret, const TSVector3f *axis, float32_t angle);
TS_CAPI TSMatrix4x3f* TS_CCALL tsMatrix4x3f_lookAt(TSMatrix4x3f *ret, const TSVector3f *from, const TSVector3f *to, const TSVector3f *up);
TS_CAPI TSMatrix4x3f* TS_CCALL tsMatrix4x3f_placeTo(TSMatrix4x3f *ret, const TSVector3f *to, const TSVector3f *from, const TSVector3f *up);
TS_CAPI TSMatrix4x3f* TS_CCALL tsMatrix4x3f_compose(TSMatrix4x3f *ret, const TSVector3f *t, const struct TSQuaternionf *r, const TSVector3f *s);
TS_CAPI TSMatrix4x3f* TS_CCALL tsMatrix4x3f_basis(TSMatrix4x3f *ret, const TSVector3f *normal, const TSVector3f *t);
TS_CAPI TSMatrix4x3f* TS_CCALL tsMatrix4x3f_normalize(TSMatrix4x3f *ret, const TSMatrix4x3f *m);
TS_CAPI TSMatrix4x3f* TS_CCALL tsMatrix4x3f_transpose(TSMatrix4x3f *ret, const TSMatrix4x3f *m);
TS_CAPI TSMatrix4x3f* TS_CCALL tsMatrix4x3f_inverse(TSMatrix4x3f *ret, const TSMatrix4x3f *m);
TS_CAPI TSMatrix4x3f* TS_CCALL tsMatrix4x3f_inverse33(TSMatrix4x3f *ret, const TSMatrix4x3f *m);
TS_CAPI void TS_CCALL tsQuaternionf_set(TSQuaternionf *q, const TSVector4f *row_0, const TSVector4f *row_1, const TSVector4f *row_2);
TS_CAPI void TS_CCALL tsQuaternionf_get(const TSQuaternionf *q, TSVector4f *row_0, TSVector4f *row_1, TSVector4f *row_2);