plugins/binding/swift/include/TellusimObjCMath.h

/*
 */
struct TSQuaternionf;
typedef TSVector2f Vector2f;
typedef TSVector2d Vector2d;
typedef struct TSVector3d {
	union {
		struct {
			float64_t x, y, z;
		};
		struct {
			TSVector2d xy;
			float64_t xy_z;
		};
		float64_t v[3];
	};
} TSVector3d;
typedef TSVector3f Vector3f;
typedef TSVector3d Vector3d;
typedef TSVector4f Vector4f;
/*
 */
typedef TSMatrix3x2f Matrix3x2f;
typedef TSMatrix3x2d Matrix3x2d;
/*
 */
typedef TSMatrix4x3f Matrix4x3f;
typedef TSMatrix4x3d Matrix4x3d;
/*
 */
typedef TSMatrix4x4f Matrix4x4f;
/*
 */
typedef TSQuaternionf Quaternionf;