plugins/binding/rust/source/TellusimRSMath.rs

	
	pub fn new(row_0: &Vector3f, row_1: &Vector3f) -> Matrix3x2f {
		Matrix3x2f { row_0: *row_0, row_1: *row_1 }
	}
	pub fn new_a(src: &[f32]) -> Matrix3x2f {
		let mut ret = Matrix3x2f::default();
		unsafe { tsMatrix3x2f_set(&mut ret, src.as_ptr(), src.len() as u32, 1) }
		ret
	}
	
	pub fn set(&mut self, src: &[f32]) {
		unsafe { tsMatrix3x2f_set(self, src.as_ptr(), src.len() as u32, 1) }
	}
	pub fn set_column_major(&mut self, src: &[f32]) {
		unsafe { tsMatrix3x2f_set(self, src.as_ptr(), src.len() as u32, 0) }
	}
	pub fn get(&self, dest: &mut [f32]) {
		unsafe { tsMatrix3x2f_get(self, dest.as_mut_ptr(), dest.len() as u32, 1) }
	}
	pub fn get_column_major(&self, dest: &mut [f32]) {
		unsafe { tsMatrix3x2f_get(self, dest.as_mut_ptr(), dest.len() as u32, 0) }
	}
	
	pub fn scale_s(s: f32) -> Matrix3x2f {
		let mut ret = Matrix3x2f::default();
		unsafe { tsMatrix3x2f_scale(&mut ret, s, s); }
		ret
	}
	pub fn scale(x: f32, y: f32) -> Matrix3x2f {
		let mut ret = Matrix3x2f::default();
		unsafe { tsMatrix3x2f_scale(&mut ret, x, y); }
		ret
	}
	pub fn translate(x: f32, y: f32) -> Matrix3x2f {
		let mut ret = Matrix3x2f::default();
		unsafe { tsMatrix3x2f_translate(&mut ret, x, y); }
		ret
	}
	pub fn rotate(angle: f32) -> Matrix3x2f {
		let mut ret = Matrix3x2f::default();
		unsafe { tsMatrix3x2f_rotate(&mut ret, angle); }
		ret
	}
	
	pub fn transpose(&self) -> Matrix3x2f {
		let mut ret = Matrix3x2f::default();
		unsafe { tsMatrix3x2f_transpose(&mut ret, self); }
		ret
	}
	pub fn inverse(&self) -> Matrix3x2f {
		let mut ret = Matrix3x2f::default();
		unsafe { tsMatrix3x2f_inverse(&mut ret, self); }
		ret
	}
	
	pub fn identity() -> Matrix3x2f {
		Matrix3x2f { row_0: Vector3f::new(1.0, 0.0, 0.0), row_1: Vector3f::new(0.0, 1.0, 0.0) }
	}
}

/*
 */
impl Default for Matrix3x2f {
	fn default() -> Matrix3x2f {
		Matrix3x2f::identity()
	}
}

/*
 */
impl fmt::Display for Matrix3x2f {
	fn fmt(&self, f: &mut fmt::Formatter) -> fmt::Result {
		write!(f, "{0} : {1}", self.row_0, self.row_1)
	}
}

/*
 */
declare_op!(Matrix3x2f, Vector2f, Vector2f, Mul, mul, tsMatrix3x2f_mul2);
declare_op!(Vector2f, Matrix3x2f, Vector2f, Mul, mul, tsMatrix3x2f_mul2t);
declare_vector_op!(Matrix3x2f, Mul, mul, tsMatrix3x2f_mul);

/*
 */
extern "C" {
	fn tsMatrix3x2f_set(m: *mut Matrix3x2f, src: *const f32, size: u32, row_major: i32);
	fn tsMatrix3x2f_get(m: *const Matrix3x2f, dest: *mut f32, size: u32, row_major: i32);
	fn tsMatrix3x2f_scale(ret: *mut Matrix3x2f, x: f32, y: f32) -> *mut Matrix3x2f;
	fn tsMatrix3x2f_translate(ret: *mut Matrix3x2f, x: f32, y: f32) -> *mut Matrix3x2f;
	fn tsMatrix3x2f_rotate(ret: *mut Matrix3x2f, angle: f32) -> *mut Matrix3x2f;
	fn tsMatrix3x2f_mul2(ret: *mut Vector2f, q: *const Matrix3x2f, v: *const Vector2f) -> *mut Matrix3x2f;
	fn tsMatrix3x2f_mul2t(ret: *mut Vector2f, v: *const Vector2f, q: *const Matrix3x2f) -> *mut Matrix3x2f;
	fn tsMatrix3x2f_mul(ret: *mut Matrix3x2f, v0: *const Matrix3x2f, v1: *const Matrix3x2f) -> *mut Matrix3x2f;
	fn tsMatrix3x2f_transpose(ret: *mut Matrix3x2f, v: *const Matrix3x2f) -> *mut Matrix3x2f;
	fn tsMatrix3x2f_inverse(ret: *mut Matrix3x2f, v: *const Matrix3x2f) -> *mut Matrix3x2f;
}

/*****************************************************************************\
 *
 * Matrix3x2d
 *
\*****************************************************************************/

/*
 */
#[repr(C)]
#[derive(Copy, Clone)]
pub struct Matrix3x2d {
	pub row_0: Vector3d,
	pub row_1: Vector3d,
}

/*
 */
impl Matrix3x2d {
	
	pub fn new(row_0: &Vector3d, row_1: &Vector3d) -> Matrix3x2d {
		Matrix3x2d { row_0: *row_0, row_1: *row_1 }
	}
	pub fn new_a(src: &[f64]) -> Matrix3x2d {
		let mut ret = Matrix3x2d::default();
		unsafe { tsMatrix3x2d_set(&mut ret, src.as_ptr(), src.len() as u32, 1) }
		ret
	}
	
	pub fn set(&mut self, src: &[f64]) {
		unsafe { tsMatrix3x2d_set(self, src.as_ptr(), src.len() as u32, 1) }
	}
	pub fn set_column_major(&mut self, src: &[f64]) {
		unsafe { tsMatrix3x2d_set(self, src.as_ptr(), src.len() as u32, 0) }
	}
	pub fn get(&self, dest: &mut [f64]) {
		unsafe { tsMatrix3x2d_get(self, dest.as_mut_ptr(), dest.len() as u32, 1) }
	}
	pub fn get_column_major(&self, dest: &mut [f64]) {
		unsafe { tsMatrix3x2d_get(self, dest.as_mut_ptr(), dest.len() as u32, 0) }
	}
	
	pub fn scale_s(s: f64) -> Matrix3x2d {
		let mut ret = Matrix3x2d::default();
		unsafe { tsMatrix3x2d_scale(&mut ret, s, s); }
		ret
	}
	pub fn scale(x: f64, y: f64) -> Matrix3x2d {
		let mut ret = Matrix3x2d::default();
		unsafe { tsMatrix3x2d_scale(&mut ret, x, y); }
		ret
	}
	pub fn translate(x: f64, y: f64) -> Matrix3x2d {
		let mut ret = Matrix3x2d::default();
		unsafe { tsMatrix3x2d_translate(&mut ret, x, y); }
		ret
	}
	pub fn rotate(angle: f64) -> Matrix3x2d {
		let mut ret = Matrix3x2d::default();
		unsafe { tsMatrix3x2d_rotate(&mut ret, angle); }
		ret
	}
	
	pub fn transpose(&self) -> Matrix3x2d {
		let mut ret = Matrix3x2d::default();
		unsafe { tsMatrix3x2d_transpose(&mut ret, self); }
		ret
	}
	pub fn inverse(&self) -> Matrix3x2d {
		let mut ret = Matrix3x2d::default();
		unsafe { tsMatrix3x2d_inverse(&mut ret, self); }
		ret
	}
	
	pub fn identity() -> Matrix3x2d {
		Matrix3x2d { row_0: Vector3d::new(1.0, 0.0, 0.0), row_1: Vector3d::new(0.0, 1.0, 0.0) }
	}
}

/*
 */
impl Default for Matrix3x2d {
	fn default() -> Matrix3x2d {
		Matrix3x2d::identity()
	}
}

/*
 */
impl fmt::Display for Matrix3x2d {
	fn fmt(&self, f: &mut fmt::Formatter) -> fmt::Result {
		write!(f, "{0} : {1}", self.row_0, self.row_1)
	}
}

/*
 */
declare_op!(Matrix3x2d, Vector2d, Vector2d, Mul, mul, tsMatrix3x2d_mul2);
declare_op!(Vector2d, Matrix3x2d, Vector2d, Mul, mul, tsMatrix3x2d_mul2t);
declare_vector_op!(Matrix3x2d, Mul, mul, tsMatrix3x2d_mul);

/*
 */
extern "C" {
	fn tsMatrix3x2d_set(m: *mut Matrix3x2d, src: *const f64, size: u32, row_major: i32);
	fn tsMatrix3x2d_get(m: *const Matrix3x2d, dest: *mut f64, size: u32, row_major: i32);
	fn tsMatrix3x2d_scale(ret: *mut Matrix3x2d, x: f64, y: f64) -> *mut Matrix3x2d;
	fn tsMatrix3x2d_translate(ret: *mut Matrix3x2d, x: f64, y: f64) -> *mut Matrix3x2d;
	fn tsMatrix3x2d_rotate(ret: *mut Matrix3x2d, angle: f64) -> *mut Matrix3x2d;
	fn tsMatrix3x2d_mul2(ret: *mut Vector2d, q: *const Matrix3x2d, v: *const Vector2d) -> *mut Matrix3x2d;
	fn tsMatrix3x2d_mul2t(ret: *mut Vector2d, v: *const Vector2d, q: *const Matrix3x2d) -> *mut Matrix3x2d;
	fn tsMatrix3x2d_mul(ret: *mut Matrix3x2d, v0: *const Matrix3x2d, v1: *const Matrix3x2d) -> *mut Matrix3x2d;
	fn tsMatrix3x2d_transpose(ret: *mut Matrix3x2d, v: *const Matrix3x2d) -> *mut Matrix3x2d;
	fn tsMatrix3x2d_inverse(ret: *mut Matrix3x2d, v: *const Matrix3x2d) -> *mut Matrix3x2d;
}

/*****************************************************************************\
 *
 * Matrix4x3f
 *
\*****************************************************************************/

/*
 */
#[repr(C, align(16))]
#[derive(Copy, Clone)]
pub struct Matrix4x3f {
	pub row_0: Vector4f,
	pub row_1: Vector4f,
	pub row_2: Vector4f,
}

/*
 */
impl Matrix4x3f {
	
	pub fn new(row_0: &Vector4f, row_1: &Vector4f, row_2: &Vector4f) -> Matrix4x3f {
		Matrix4x3f { row_0: *row_0, row_1: *row_1, row_2: *row_2 }
	}
	pub fn new_m4x3d(m: &Matrix4x3d) -> Matrix4x3f {
		Matrix4x3f { row_0: Vector4f::new_v4d(&m.row_0), row_1: Vector4f::new_v4d(&m.row_1), row_2: Vector4f::new_v4d(&m.row_2) }
	}
	pub fn new_m4x4(m: &Matrix4x4f) -> Matrix4x3f {
		Matrix4x3f { row_0: m.row_0, row_1: m.row_1, row_2: m.row_2 }
	}
	pub fn new_q(q: &Quaternionf) -> Matrix4x3f {
		let mut ret = Matrix4x3f::default();
		unsafe { tsQuaternionf_get(q, &mut ret.row_0, &mut ret.row_1, &mut ret.row_2) }
		ret
	}
	pub fn new_a(src: &[f32]) -> Matrix4x3f {
		let mut ret = Matrix4x3f::default();
		unsafe { tsMatrix4x3f_set(&mut ret, src.as_ptr(), src.len() as u32, 1) }
		ret
	}
	
	pub fn set(&mut self, src: &[f32]) {
		unsafe { tsMatrix4x3f_set(self, src.as_ptr(), src.len() as u32, 1) }
	}
	pub fn set_column_major(&mut self, src: &[f32]) {
		unsafe { tsMatrix4x3f_set(self, src.as_ptr(), src.len() as u32, 0) }
	}
	pub fn set_q(&mut self, q: &Quaternionf) {
		unsafe { tsQuaternionf_get(q, &mut self.row_0, &mut self.row_1, &mut self.row_2) }
	}
	pub fn get(&self, dest: &mut [f32]) {
		unsafe { tsMatrix4x3f_get(self, dest.as_mut_ptr(), dest.len() as u32, 1) }
	}
	pub fn get_column_major(&self, dest: &mut [f32]) {
		unsafe { tsMatrix4x3f_get(self, dest.as_mut_ptr(), dest.len() as u32, 0) }
	}
	pub fn get_q(&self, q: &mut Quaternionf) {
		unsafe { tsQuaternionf_set(q, &self.row_0, &self.row_1, &self.row_2) }
	}
	
	pub fn scale_s(s: f32) -> Matrix4x3f {
		let mut ret = Matrix4x3f::default();
		unsafe { tsMatrix4x3f_scale(&mut ret, s, s, s); }
		ret
	}
	pub fn scale(x: f32, y: f32, z: f32) -> Matrix4x3f {
		let mut ret = Matrix4x3f::default();
		unsafe { tsMatrix4x3f_scale(&mut ret, x, y, z); }
		ret
	}
	pub fn scale_v3(v: &Vector3f) -> Matrix4x3f {
		let mut ret = Matrix4x3f::default();
		unsafe { tsMatrix4x3f_scale(&mut ret, v.x, v.y, v.z); }
		ret
	}
	pub fn translate(x: f32, y: f32, z: f32) -> Matrix4x3f {
		let mut ret = Matrix4x3f::default();
		unsafe { tsMatrix4x3f_translate(&mut ret, x, y, z); }
		ret
	}
	pub fn translate_v3(v: &Vector3f) -> Matrix4x3f {
		let mut ret = Matrix4x3f::default();
		unsafe { tsMatrix4x3f_translate(&mut ret, v.x, v.y, v.z); }
		ret
	}
	pub fn rotate_x(angle: f32) -> Matrix4x3f {
		let mut ret = Matrix4x3f::default();
		unsafe { tsMatrix4x3f_rotateX(&mut ret, angle); }
		ret
	}
	pub fn rotate_y(angle: f32) -> Matrix4x3f {
		let mut ret = Matrix4x3f::default();
		unsafe { tsMatrix4x3f_rotateY(&mut ret, angle); }
		ret
	}
	pub fn rotate_z(angle: f32) -> Matrix4x3f {
		let mut ret = Matrix4x3f::default();
		unsafe { tsMatrix4x3f_rotateZ(&mut ret, angle); }
		ret
	}
	pub fn rotate(axis: &Vector3f, angle: f32) -> Matrix4x3f {
		let mut ret = Matrix4x3f::default();
		unsafe { tsMatrix4x3f_rotate(&mut ret, axis, angle); }
		ret
	}
	
	pub fn look_at(from: &Vector3f, to: &Vector3f, up: &Vector3f) -> Matrix4x3f {
		let mut ret = Matrix4x3f::default();
		unsafe { tsMatrix4x3f_lookAt(&mut ret, from, to, up); }
		ret
	}
	pub fn place_to(to: &Vector3f, from: &Vector3f, up: &Vector3f) -> Matrix4x3f {
		let mut ret = Matrix4x3f::default();
		unsafe { tsMatrix4x3f_placeTo(&mut ret, to, from, up); }
		ret
	}
	pub fn compose(t: &Vector3f, r: &Quaternionf, s: &Vector3f) -> Matrix4x3f {
		let mut ret = Matrix4x3f::default();
		unsafe { tsMatrix4x3f_compose(&mut ret, t, r, s); }
		ret
	}
	pub fn basis(normal: &Vector3f, t: &Vector3f) -> Matrix4x3f {
		let mut ret = Matrix4x3f::default();
		unsafe { tsMatrix4x3f_basis(&mut ret, normal, t); }
		ret
	}
	
	pub fn normalize(&self) -> Matrix4x3f {
		let mut ret = Matrix4x3f::default();
		unsafe { tsMatrix4x3f_normalize(&mut ret, self); }
		ret
	}
	pub fn transpose(&self) -> Matrix4x3f {
		let mut ret = Matrix4x3f::default();
		unsafe { tsMatrix4x3f_transpose(&mut ret, self); }
		ret
	}
	pub fn inverse(&self) -> Matrix4x3f {
		let mut ret = Matrix4x3f::default();
		unsafe { tsMatrix4x3f_inverse(&mut ret, self); }
		ret
	}
	pub fn inverse33(&self) -> Matrix4x3f {
		let mut ret = Matrix4x3f::default();
		unsafe { tsMatrix4x3f_inverse33(&mut ret, self); }
		ret
	}
	
	pub fn identity() -> Matrix4x3f {
		Matrix4x3f { row_0: Vector4f::new(1.0, 0.0, 0.0, 0.0), row_1: Vector4f::new(0.0, 1.0, 0.0, 0.0), row_2: Vector4f::new(0.0, 0.0, 1.0, 0.0) }
	}
}

/*
 */
impl Default for Matrix4x3f {
	fn default() -> Matrix4x3f {
		Matrix4x3f::identity()
	}
}

/*
 */
impl fmt::Display for Matrix4x3f {
	fn fmt(&self, f: &mut fmt::Formatter) -> fmt::Result {
		write!(f, "{0} : {1} : {2}", self.row_0, self.row_1, self.row_2)
	}
}
